--- a/reports/final/final.tex
+++ b/reports/final/final.tex
@@ -1,7 +1,7 @@
 \documentclass[10pt]{article}
 \usepackage{hyperref}
 \usepackage[utf8]{inputenc}
-
+\usepackage{graphicx}
 %\title{Report for Automatic Program Analysis project 1}
 \title{Automatic Lua Code Analysis}
 \author{Eduard van der Bent \and Frank Dedden \and Wilco Kusee \and Falco Peijnenburg}
@@ -17,7 +17,11 @@
 % - Dependencies DONE
 % - Design choices / highlevel description
 
-\section{Architecture}
+\section{Introduction}
+
+For this assignment we have used monotone frameworks to eliminate dead code inside Lua.
+
+\section{Architecture} %herschrijven
 % TODO: komen er nog meer bestanden?
 When we take a look inside the \texttt{analysis/src} directory, we can see the following files and directories:
 \begin{itemize}
@@ -55,9 +59,23 @@ The parser depends on some dependencies (like \texttt{uuagc}, \texttt{uu-parsing
 % TODO: dit verandert waarschijnlijk nog? Dus heb hier nog niks neergezet.
 
 
-\section{High level description}
+\section{Lattices and Analysis}
+Our analysis consists of finding dead code. To accomplish this we use three forms of analysis. The first one is a "reach" analysis, where we check if every node in the control flow graph of the program can be reached from the starting node. Nodes that are unreachable, are dead code.
+The second analysis that is done, is Live Variable analysis. This is done to check for superfluous assignments. Nodes that have an assignment in them, but that value is not present in the exit label of that node, are dead code.
+The final analysis is Sign Analysis. This is done to check conditionals to check for liveness in their branches. Every node that does not have sign information at the end of the analysis is dead code.
+The result of these analyses is combined, checking for every node if it is dead in one of the analysis. If it is dead in at least one analysis, it is considered dead code.
 
+The lattices are defined as follows: %gebruik hier iets beters voor lel
+\includegraphics[scale=0.5]{latticeReach.png}
+\includegraphics[scale=0.5]{latticeLive.png}
+\includegraphics[scale=0.5]{latticeSign.png}
 
+\section{Limitations}
+We did not manage to properly make the embellished part of the monotone framework work, therefore in all analyses there is mild / severe poisoning when trying to analyze programs with functions.
+
+We can not handle the following lua constructs: local declarations and functions, for loops, tables and anonymous functions.
+
+We can handle the following lua constructs: Definitions, Function calls, Labels and Goto's, Breaks, Continues, Do-blocks, While, Repeat and If.
 
 \section{Nog wat andere zooi welke nog een kopje moeten krijgen}
 % - wat zijn de beperkingen
@@ -66,9 +84,34 @@ The parser depends on some dependencies (like \texttt{uuagc}, \texttt{uu-parsing
 % - gebruik van widening?
 % - wat is de operator?
 
-\section{Examples}
-% Hier komen de examples
-% Minstens een example moet nader uitgelegd worden
+\section{Example}
+In this section we will explain a running example. The code used for the example is the following:\\
 
+x = 1\\
+b = function(f)\\
+if f then\\
+a = f\\
+else \\
+a = f\\
+end\\
+return a\\
+end\\
+x = b(true)\\
+y = x\\
+if not x then\\
+print(y)\\
+end\\
+x = true\\
+while not x then\\
+print(y)\\
+end\\
+
+Its associated control flow graph is: \\
+\includegraphics[scale=0.45]{utTesta.png}
+
+First of all we discuss the reach analysis. The first node is always reachable, and since there are no nodes without a parent, everything is reachable in this case.\\
+Second of all is the Live Variables analysis. The first assignment of x is done but it is not used when x gets its next assignment, so it is dead code.\\
+Finally, the Sign Analysis is done. When g is assigned true, the condition of the while loop will never be true. This means that the while-block is dead, and we choose not to visit the nodes of this block in the analysis. This means that the nodes of the block will have bottom as their value, and it is marked as dead code.\\
+More interesting is that we do not mark the if-block as dead code. When calling a top-level function, which can also be called from outside the program, we cannot safely make assumptions about the signs of the arguments - we could then incorrectly mark parts of the function as dead code. We thus have to assume that all arguments of a function have Top as their signs. This means that in the program x will have Top as its sign.
 
 \end{document}
