--- a/reports/final/final.tex
+++ b/reports/final/final.tex
@@ -59,7 +59,7 @@ This runs both the uuagc compiler and the GHC compiler, creating a executable ca
 The analyser takes code input from stdin and writes its results to stdout. Running the analyser with an example file is done as follows:
 
 \begin{lstlisting}[frame=single,numbers=none,caption=Running with an example file]
-cat somefile.lua | dist/build/gluanalysis/gluanalysis
+cat  examples/example1.lua | dist/build/gluanalysis/gluanalysis
 \end{lstlisting}
 
 This assumes the current working directory is set to \texttt{analysis/}.
