Eduard you broke everything

--- a/reports/final/final.tex
+++ b/reports/final/final.tex
@@ -3,6 +3,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
 \usepackage{tikz-cd}
+\usepackage{listings}
 %\title{Report for Automatic Program Analysis project 1}
 \title{Automatic Lua Code Analysis}
 \author{Eduard van der Bent \and Frank Dedden \and Wilco Kusee \and Falco Peijnenburg}
