--- a/reports/final/final.tex
+++ b/reports/final/final.tex
@@ -3,6 +3,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
 \usepackage{tikz-cd}
+\usepackage{listings}
 %\title{Report for Automatic Program Analysis project 1}
 \title{Automatic Lua Code Analysis}
 \author{Eduard van der Bent \and Frank Dedden \and Wilco Kusee \and Falco Peijnenburg}
@@ -115,36 +116,8 @@ We can handle the following lua constructs: Definitions, Function calls, Labels 
 
 
 \section{Example}
-<<<<<<< HEAD
-In this section we will explain a running example. The code used for the example is the following:\\
+In this section we will explain a running example. The code used for the example is the following, and its associated control flow graph can be seen in figure \ref{fig:cfg}.
 
-x = 1\\
-b = function(f)\\
-if f then\\
-a = f\\
-else \\
-a = f\\
-end\\
-return a\\
-end\\
-x = b(true)\\
-y = x\\
-if not x then\\
-print(y)\\
-end\\
-x = true\\
-while not x then\\
-print(y)\\
-end\\
-
-Its associated control flow graph is:
-
-\includegraphics[scale=0.45]{utTesta.png}
-
-=======
-In this section we will explain a running example. The code used for the example is the following, and its associated control flow graph can be seen in figure \ref{fig:cfg}.\\
-
-\newpage
 \begin{lstlisting}[frame=single,numbers=left,caption=Simple example] % lstlisting kent geen Lua, dus maar geen syntax highlighting
 x = 1
 b = function(f)
@@ -168,12 +141,13 @@ while not x then
     print(y)
 end
 \end{lstlisting}
+
 \begin{figure}[htp]
     \includegraphics[scale=0.45]{utTesta.png}
     \caption{Control flow graph of the example}
     \label{fig:cfg}
 \end{figure}
->>>>>>> 1cfa6e455267048e7420d24c8a3aefda7349ba0c
+
 First of all we discuss the reach analysis. The first node is always reachable, and since there are no nodes without a parent, everything is reachable in this case.\\
 Second of all is the Live Variables analysis. The first assignment of x is done but it is not used when x gets its next assignment, so it is dead code.\\
 Finally, the Sign Analysis is done. When g is assigned true, the condition of the while loop will never be true. This means that the while-block is dead, and we choose not to visit the nodes of this block in the analysis. This means that the nodes of the block will have bottom as their value, and it is marked as dead code.\\
