--- a/reports/final/final.tex
+++ b/reports/final/final.tex
@@ -6,7 +6,7 @@
 \usepackage{listings}
 %\title{Report for Automatic Program Analysis project 1}
 \title{Automatic Lua Code Analysis}
-\author{Eduard van der Bent \and Frank Dedden \and Wilco Kusee \and Falco Peijnenburg}
+\author{Eduard van der Bent (3583600) \and Frank Dedden (3705269) \and Wilco Kusee (3800296) \and Falco Peijnenburg (3749002)}
 
 \begin{document}
 \maketitle
